--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -18,7 +18,7 @@ status-website:
   navbar:
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
-  themeUrl: https://der-reiskoch.github.io/upptime/der-reiskoch-theme.css   
+  theme: dark   
       
       
 
