--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,22 +3,24 @@ owner: Der-Reiskoch # Your GitHub organization or username, where this repositor
 repo: upptime # The name of this repository
 
 sites:
-  - name: Der Reiskoch
+  - name: Blog
     url: https://der.reisko.ch/
+  - name: Media
+    url: https://der-reiskoch.github.io/foodie_hugo_media/media/_fotoalbum/2017/20171027_selbstversorger.jpg
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   # cname: demo.upptime.js.org
   baseUrl: /upptime
-  logoUrl: hhttps://der-reiskoch.github.io/upptime/logo.svg
-  name: Der Reiskoch Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is the status page for "Der Reiskoch". [**Get your own for free**](https://github.com/upptime/upptime)
+  logoUrl: https://der-reiskoch.github.io/upptime/logo.svg
+  name: Der Reiskoch
+  introTitle: "Der Reiskock Status"
+  introMessage: **Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub.. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
-  theme: light   
+  themeUrl:  https://der-reiskoch.github.io/upptime/theme.css   
       
       
 
