--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -14,8 +14,8 @@ status-website:
   # cname: demo.upptime.js.org
   baseUrl: /upptime
   logoUrl: https://der-reiskoch.github.io/foodie_hugo_media/logo.svg
-  name: Der Reiskoch
-  introTitle: Der Reiskoch Status
+  name: Der Reiskoch - Status Monitoring
+  introTitle: Der Reiskoch
   introMessage: Upptime is the open-source uptime monitor and status page, powered entirely by GitHub. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
     - title: GitHub
