--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -8,6 +8,7 @@ sites:
   - name: Media
     url: https://der-reiskoch.github.io/foodie_hugo_media/logo.png
 
+assignees: erich3000
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
