--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,6 +5,8 @@ repo: upptime # The name of this repository
 sites:
   - name: Blog
     url: https://der.reisko.ch
+  - name: Comments Service
+    url: https://kommentiere-den.reisko.ch  
   - name: Media
     url: https://der-reiskoch.github.io/foodie_hugo_media/logo.png
 
